bat.bool1.sleepin.SleepIn.scala.error
Erreur de compilation :
SleepIn:6: error: Boolean does not take parameters
  else (vacation==true){
                       ^SleepIn:9: error: type mismatch;
 found   : Unit
 required: Boolean
  return 
  ^