bat.bool1.sleepin.SleepIn.scala.code
def sleepIn(weekday: Boolean, vacation: Boolean): Boolean = {
  if(weekday==false){
    return true
  }
  else (vacation==true){
    return true
  }
  return 
}